# competitions-and-challenges

./: README.md
ADCB-Assessment-2025/: app.py  pyproject.toml
ADCB-Assessment-2025/docs/: explanation_guide.txt
ADCB-Assessment-2025/notebooks/: Agentic.ipynb  Classifier.ipynb  model.pkl
ADCB-Assessment-2025/notebooks/.ipynb_checkpoints/: Classifier-checkpoint.ipynb
ADCB-Assessment-2025/outputs/: error_analysis_by_X2.csv  error_analysis_by_X3.csv  error_analysis_by_X4.csv  error_analysis_by_age_bin.csv  error_analysis_by_income_bin.csv  error_analysis_fairness.csv  error_analysis_feature_diff.csv  error_analysis_group_error_rates.csv  model_benchmarks.csv
ADCB-Assessment-2025/src/utils/: logger.py
AirBnb Zillow Data Challenge/: Airbnb-Zillow-Data-Challenge-Exploratory_Data_Analysis.ipynb  README.md  requirements.txt
AirBnb Zillow Data Challenge/dataset/: README for data download.md
Amazon-Analyticon-2022/: IMDB-clean-up.ipynb  IMDB-streamgraph.ipynb  README.md
COVID-19/: unwrapping-the-covid-19-genomes.ipynb
HackerRank/Python/Basic Data Types/: lists.py  (+5 more)
Kaggle/COVID-19/: README.md
Kaggle/Digit-Recognizer/: digit-recognizer--kaggle.ipynb
Kaggle/Predict-Future-Sales/: requirements.txt
LeetCode/Algorithms/: 1480_running-sum-of-1d-array.py  1672_richest-customer-wealth.py  1_two-sum.py  2_add-two-numbers.py  2_add_two_numbers.py
PornHub Data/: README.md
Predict-Future-Sales/: README.md  predict-future-sales.py  requirements.txt
Super-Heroes/: README.md  Super-Heroes.ipynb
Terminal C1/: README.md
Titanic/: Titanic2.ipynb  titanic.ipynb
(+57 files in other folders)
